--- a/rw-animation-motionlayout/app/src/main/res/layout/activity_main.xml
+++ b/rw-animation-motionlayout/app/src/main/res/layout/activity_main.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:background="@color/colorBackground"
+  app:layoutDescription="@xml/motion_scene"
   tools:context=".MainActivity">
 
   <ImageView
@@ -23,9 +24,6 @@
     android:layout_height="@dimen/laser_height"
     android:contentDescription="@string/laser_fire"
     android:scaleType="fitCenter"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@id/trooper"
     app:srcCompat="@drawable/laserfire" />
 
   <TextView
@@ -47,9 +45,6 @@
     android:layout_height="@dimen/saber_height"
     android:contentDescription="@string/light_saber"
     android:scaleType="fitCenter"
-    app:layout_constraintBottom_toTopOf="@+id/yoda"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
     app:srcCompat="@drawable/lightsaber" />
 
   <ImageView
@@ -63,4 +58,4 @@
     app:layout_constraintStart_toStartOf="parent"
     app:srcCompat="@drawable/yoda" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.constraintlayout.motion.widget.MotionLayout>
