--- a/rw-animation-motionlayout/app/src/main/res/layout/activity_sequels.xml
+++ b/rw-animation-motionlayout/app/src/main/res/layout/activity_sequels.xml
@@ -2,8 +2,10 @@
 <androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools"
+  android:id="@+id/motionLayout"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
+  app:layoutDescription="@xml/custom_menu_scene"
   tools:context=".SequelsActivity">
 
   <TextView
